# intentohibri

./: ANALISIS_COMPATIBILIDAD_CT.md  BelzebubAdmin.bat  CMakeLists.txt  COMPILACION_EXITOSA.md  ESTADO_FINAL_PROYECTO.md  README.md  README_EJECUTAR_COMO_ADMIN.md  README_ESTADO_ACTUAL.md  README_v3.md  abrir_compilacion_msys2.bat  analisis_cheat_engine.md  build.bat  build_belzebub.bat  compile_vs.bat  install_dependencies.bat  limpiadordedrivers.ps1  obtenerdrivers.ps1  run_as_admin.ps1  setup_compiler.ps1  temp_request.json  test.cpp  test_cheat_table.ct
backend/: ct_loader.cpp  ct_loader.h  ct_parser.cpp  ct_parser.h  driver_manager.cpp  driver_manager.h  injection_engine.cpp  injection_engine.h  main.cpp  privilege_manager.cpp  privilege_manager.h  server.cpp  utils.cpp  utils.h
core_dlls/: README.md
drivers/: cpuz159_x64.sys  gdrv.sys  sample_drivers_info.md
frontend/: Dashboard.jsx  dashboard.html
libs/: httplib.h
temp_installers/: cpuz.ini  cpuz_readme.txt
